inputs/source_meta/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Communication_Via__c</fullName>
        <inlineHelpText>This field tells you about the Company Activity Profile</inlineHelpText>
        <label>Communication Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <inlineHelpText>This field tells you about the Company Type</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Shared Network</fullName>
                </value>
                <value>
                    <fullName>Dedicated Network</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>HelpDesk</fullName>
                </value>
                <value>
                    <fullName>Hughes</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Jupiter</fullName>
                </value>
                <value>
                    <fullName>Spaceway</fullName>
                </value>
                <value>
                    <fullName>Broadband Remote</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>SP Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_or_Location__c</fullName>
        <description>Indicates whether a given account is company or location.</description>
        <formula>IF( Record_Type_Name__c =&apos;Location&apos;,&apos;Location&apos;,IF(Record_Type_Name__c  = &apos;Consumer Customer&apos;,&apos;Consumer&apos;,IF(Record_Type_Name__c  = &apos;SOHO&apos;,&apos;Enterprise&apos;,&apos;Company&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether a given account is company or location.</inlineHelpText>
        <label>Company or Location?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complement__c</fullName>
        <label>Complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Customer_ID_Auto_Gen__c</fullName>
        <displayFormat>2{000000000}</displayFormat>
        <label>Consumer Customer ID Auto Gen</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <inlineHelpText>This field tells you that the contract status of the account you are viewing.</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current - No Remote Service</fullName>
                </value>
                <value>
                    <fullName>Current - Under Contract</fullName>
                </value>
                <value>
                    <fullName>Current - Under Warranty</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>No Contract</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contributor_Type__c</fullName>
        <label>Contributor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Great Contributor</fullName>
                </value>
                <value>
                    <fullName>Common Regime</fullName>
                </value>
                <value>
                    <fullName>Simplified Regime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_IP_Address__c</fullName>
        <description>Same as LAN1 IP Address on Order Object. What is the corporate IP address to be used for this Physical Location?</description>
        <label>Corporate IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County corresponding to address other than billing address</description>
        <inlineHelpText>County corresponding to address other than billing address</inlineHelpText>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtesy_Dispatch_End_Date__c</fullName>
        <label>Courtesy Dispatch End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Courtesy_Warranty_End_Date__c</fullName>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Cabal</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Hiper</fullName>
                </value>
                <value>
                    <fullName>Hipercard</fullName>
                </value>
                <value>
                    <fullName>Elo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Identification_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Check Identification Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Identification_lD__c</fullName>
        <label>Credit Check Identification lD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Serial_number__c</fullName>
        <label>Credit Serial number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Verification_Status__c</fullName>
        <description>Allow Forseva info on Verification Status to be tied to Hughes input on the same value.</description>
        <inlineHelpText>Allow Forseva info on Verification Status to be tied to Hughes input on the same value.</inlineHelpText>
        <label>Credit Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed - Forseva</fullName>
                </value>
                <value>
                    <fullName>Passed - Credit Team</fullName>
                </value>
                <value>
                    <fullName>Pending - Low Score</fullName>
                </value>
                <value>
                    <fullName>Pending - No Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Positioning__c</fullName>
        <label>Current Positioning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Organic Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Location_ID__c</fullName>
        <description>Customer provided Store Number for this physical location.</description>
        <inlineHelpText>Customer provided Store Number for this physical location.</inlineHelpText>
        <label>Customer Location ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Referral_Phone__c</fullName>
        <label>Customer Referral Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Value__c</fullName>
        <description>Customer Value</description>
        <inlineHelpText>Customer Value</inlineHelpText>
        <label>Customer Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <description>Account name or names used by this customer or partner.  These are &quot;doing business as&quot; equivalents of the account name given for this account.</description>
        <inlineHelpText>Account name or names used by this customer or partner.  These are &quot;doing business as&quot; equivalents of the account name given for this account.</inlineHelpText>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSL_Phone__c</fullName>
        <description>Same as DSL Tel Number on Order Object. This is the primary phone for this physical location where service to be provided.</description>
        <label>Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Data_Allowance_Manager__c</fullName>
        <label>Data Allowance Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Procera</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Added_to_Vantive__c</fullName>
        <description>This is the date the agent or dealer was added to Vantive - populated only when they have no activations to date</description>
        <inlineHelpText>This is the date the agent or dealer was added to Vantive - populated only when they have no activations to date - DO NOT CHANGE</inlineHelpText>
        <label>Date Added to Vantive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <description>Date in which this account (business) was established.</description>
        <inlineHelpText>Date in which this account (business) was established.</inlineHelpText>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Incorporated__c</fullName>
        <description>Date that this account (business) was incorporated.</description>
        <inlineHelpText>Date that this account (business) was incorporated.</inlineHelpText>
        <label>Date Incorporated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Applicable for Brazil Consumer Customer Account only.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerId__c</fullName>
        <description>This field is populated with the Dealer Ranking Report</description>
        <label>DealerId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Gateway__c</fullName>
        <description>Default Gateway (IP Address of the LAN port on your broadband router) If the router does NOT serve DHCP</description>
        <label>Default Gateway</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Google_Maps_Zoom_Level__c</fullName>
        <label>Default Google Maps Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Device_Product_Counter__c</fullName>
        <label>Device Product Counter</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dial_Back_Up_Phone__c</fullName>
        <description>Use for Broadband Dial Backup phone.</description>
        <label>Dial Back-Up Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Direct_Or_Cross_Sell__c</fullName>
        <label>Direct Or Cross Sell</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_App_Usage__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Display_App_Usage</inlineHelpText>
        <label>Display App Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Captcha__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Captcha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DistributorPartnerId__c</fullName>
        <label>Distributor Partner Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Distributor Account for Dealer and Sales Agent. Shall be null for distributor accounts itself.</description>
        <inlineHelpText>Indicates the Distributor Account for Dealer and Sales Agent. Shall be null for distributor accounts itself.</inlineHelpText>
        <label>Distributor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Distributor Account)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Is the customer a direct account or do they purchase HughesNet through a Distributor.</description>
        <inlineHelpText>What Distributor is the agent or dealer assigned to</inlineHelpText>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perfect 10</fullName>
                </value>
                <value>
                    <fullName>RS&amp;I</fullName>
                </value>
                <value>
                    <fullName>DEDC Inc dba Dow Electronics (Dist)</fullName>
                </value>
                <value>
                    <fullName>All Systems Sat Dist Inc (Dist)</fullName>
                </value>
                <value>
                    <fullName>Brix Exclusive Inc (Dist)</fullName>
                </value>
                <value>
                    <fullName>Mid-State Distributing Co (Dist)</fullName>
                </value>
                <value>
                    <fullName>CVS Systems Inc (Dist)</fullName>
                </value>
                <value>
                    <fullName>Petra Industries Inc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Expiry_Date__c</fullName>
        <description>Expiry date corresponding to the Document Number</description>
        <label>Document Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Issue_Date__c</fullName>
        <description>Issue date corresponding to the Document Number</description>
        <label>Document Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chilean Identity Card (RUN)</fullName>
                </value>
                <value>
                    <fullName>Chilean Tax Identification Number (RUT)</fullName>
                </value>
                <value>
                    <fullName>Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Ecuador Citizenship Card</fullName>
                </value>
                <value>
                    <fullName>Ecuador Foreigner Id</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC) Persona Juridica</fullName>
                </value>
                <value>
                    <fullName>Ecuador Tax Identification Number (RUC) Persona Natural</fullName>
                </value>
                <value>
                    <fullName>Foreigner ID</fullName>
                </value>
                <value>
                    <fullName>Passport Number</fullName>
                    <isActive>false</isActive>
                    <label>Passport Number</label>
                </value>
                <value>
                    <fullName>Peru Foreigner ID (CE)</fullName>
                </value>
                <value>
                    <fullName>Peru National Identity Document (DNI)</fullName>
                </value>
                <value>
                    <fullName>Peru Tax Identification Number (RUC)</fullName>
                </value>
                <value>
                    <fullName>Tax Identification Number</fullName>
                    <isActive>false</isActive>
                    <label>Tax Identification Number</label>
                </value>
                <value>
                    <fullName>Tax Identification Number (NIT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDOMS_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDOMS Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailToContactID__c</fullName>
        <label>EmailToContactID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_ID__c</fullName>
        <formula>IF(Parent.RecordType.DeveloperName = &apos;SOHO&apos;,  Parent.CBC_ID__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enterprise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Hughes_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a Hughes service already in place at this site?</description>
        <label>Existing Hughes Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Partner_Distributor__c</fullName>
        <label>Existing Partner Distributor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Month__c</fullName>
        <label>Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Year__c</fullName>
        <label>Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Account_Phone_Info__c</fullName>
        <description>This is additional field to store unformatted Account phone numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted Account phone numbers from CRM staging.</inlineHelpText>
        <label>Helpdesk Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Extra_Fax_Info__c</fullName>
        <description>This is additional field to store unformatted Fax numbers from CRM staging.</description>
        <inlineHelpText>This is additional field to store unformatted Fax numbers from CRM staging.</inlineHelpText>
        <label>Extra Fax Info</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_on_Credit_Card__c</fullName>
        <label>First Name on Credit Card</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Liability_Expiration_Date__c</fullName>
        <label>General Liability Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HNS_Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>HNS Company ID (Deprecated)</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HNS_Location_ID_Auto_Gen__c</fullName>
        <description>This ID is copied in to HNS_Location_ID__c for Location Records Only</description>
        <displayFormat>2{00000000}</displayFormat>
        <label>HNS Location ID Auto Gen</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HNS_Location_ID__c</fullName>
        <externalId>true</externalId>
        <label>HNS Location ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HSvc_Address__c</fullName>
        <formula>ShippingStreet  &amp; &quot;, &quot; &amp;  ShippingCity  &amp;  &quot;, &quot; &amp; ShippingState &amp;  &quot;, &quot; &amp; ShippingPostalCode &amp;  &quot;, &quot; &amp; ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_BusinessModel__c</fullName>
        <description>Account Business Model</description>
        <inlineHelpText>Account Business Model</inlineHelpText>
        <label>Business Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ChangeDueDateInfo__c</fullName>
        <description>This is used for maintaining the information related to calendar year and the number of times due date is changed for Billing Summary requirements.</description>
        <label>ChangeDueDateInfo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ChronicStatusLastModified__c</fullName>
        <description>Date/Time of Chronic status last modified.</description>
        <label>Chronic Status Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_Customer_Since__c</fullName>
        <formula>IF(NOT(ISBLANK(TODAY() - DATEVALUE(CreatedDate))),TEXT(FLOOR((TODAY()-DATEVALUE(CreatedDate))/365.2425)) &amp; &quot; year(s) &quot; &amp; TEXT(FLOOR(MOD((TODAY()-DATEVALUE(CreatedDate)),365.2425)/30)) &amp; &quot; month(s)&quot; &amp; TEXT(FLOOR(MOD((TODAY()-DATEVALUE(CreatedDate)),365.2425)/12)) &amp; &quot; day(s) &quot;,&quot;&quot;)</formula>
        <label>Customer since</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Hardware_Programme__c</fullName>
        <formula>CASE(Payment_Code__c ,
&quot;13&quot;, &quot;Lease&quot;,
&quot;18&quot;, &quot;Lease&quot;,
&quot;19&quot;, &quot;Lease&quot;,
&quot;20&quot;,&quot;Lease&quot;,
&quot;99&quot;, &quot;Capital Lease&quot;,
&quot;14&quot;,&quot;Recovery Act&quot;,
&quot;16&quot;, &quot;Recovery Act - DISH&quot;,
&quot;0&quot;,&quot;Purchase&quot;,
&quot;1&quot;, &quot;Purchase&quot;,
&quot;&quot;
)</formula>
        <label>Hardware Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Location_Impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Release - 3 This fields gives information whether Location is impacted or not</description>
        <label>Location Impacted ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Logged_in_User_PS_SF__c</fullName>
        <formula>IF(ISBLANK($User.HSvc_PS_User_Name__c),$User.Username,$User.HSvc_PS_User_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in User PS/SF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ParentAccountCompanyId__c</fullName>
        <formula>if( Company_or_Location__c =&apos;Location&apos;,
        if(Is_Consumer__c =true,Parent.Parent.CBC_ID__c,Parent.CBC_ID__c ),
if(Is_Consumer__c =true,Parent.Parent.CBC_ID__c,Parent.CBC_ID__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_ParentAccount__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; ParentId &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; ParentId &amp; &quot;?isdtp=vw&apos;}&quot;,

if( Company_or_Location__c =&apos;Location&apos;,
if(Is_Consumer__c =true,Parent.Parent.CBC_ID__c,Parent.CBC_ID__c ),
if(Is_Consumer__c =true,Parent.Parent.CBC_ID__c,Parent.CBC_ID__c ))




, &apos;_self&apos; )</formula>
        <label>Account Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_PhysicalAddress__c</fullName>
        <formula>IF(ShippingStreet!= null, ShippingStreet, &apos;&apos;) + &apos; &apos;+
IF(ShippingCity!= null, ShippingCity, &apos;&apos;) + &apos; &apos;+
IF(ShippingState!= null, ShippingState, &apos;&apos;) + &apos; &apos;+
IF(ShippingPostalCode != null, ShippingPostalCode, &apos;&apos;)</formula>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_isLocation_Impacted__c</fullName>
        <formula>IF ( HSvc_Location_Impacted__c == False, IMAGE(&apos;/resource/HSvc_VisualTrue&apos;,&apos;Not Impacted&apos;),IMAGE(&apos;/resource/HSvc_VisualFalse&apos;,&apos;Impacted&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Impacted Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Hughes_VSAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Hughes VSAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_ChronicSite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chronic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_Location_Status__c</fullName>
        <formula>IF(ISPICKVAL(Location_Status__c,&apos;Pending&apos;),&apos;Not Yet Commissioned&apos;, IF(ISPICKVAL(Location_Status__c,&apos;Delinquent&apos;), &apos;Locked&apos;,IF(ISPICKVAL(Location_Status__c,&apos;Seasonal Suspended&apos;),&apos;Locked&apos;,Text(Location_Status__c))))</formula>
        <label>Location Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HughesNet_Relationship__c</fullName>
        <description>Would you like to sell and install HughesNet or only sell and have Hughes fulfill the installation?</description>
        <inlineHelpText>Would you like to sell and install HughesNet or only sell and have Hughes fulfill the installation?</inlineHelpText>
        <label>HughesNet Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell Nationally</fullName>
                </value>
                <value>
                    <fullName>Sell &amp; Install Locally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HughesSvc_PSFT_HNSCompanyID__c</fullName>
        <formula>IF(Company_or_Location__c ==&apos;Location&apos;,  Parent.CBC_ID__c , CBC_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HughesSvc_PSFT_HNSCompanyID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HughesSvc_SAN__c</fullName>
        <description>This field holds HNS_Company Id or Site Id, based on whether the Account is a company or a Location. It is used for Hughes Service Cloud Billing portal integration</description>
        <formula>IF(Company_or_Location__c ==&apos;Location&apos;, Locations_Parent_HNS_Company_ID_del__c ,  CBC_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HughesSvc_SAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hughes_Router__c</fullName>
        <label>Hughes Router</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C877</fullName>
                </value>
                <value>
                    <fullName>C891</fullName>
                </value>
                <value>
                    <fullName>Fortigate60C</fullName>
                </value>
                <value>
                    <fullName>FortiGateOthers</fullName>
                </value>
                <value>
                    <fullName>HN4030</fullName>
                </value>
                <value>
                    <fullName>HN 7700</fullName>
                </value>
                <value>
                    <fullName>HN7700S</fullName>
                </value>
                <value>
                    <fullName>HN7700S-R</fullName>
                </value>
                <value>
                    <fullName>HR4400</fullName>
                </value>
                <value>
                    <fullName>PES 5000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hughes_Store_Order_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provides information on whether or not the Hughes Order was shipped</description>
        <inlineHelpText>Provides information on whether or not the Hughes Order was shipped</inlineHelpText>
        <label>Hughes Store Order Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_Other_Broadband_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If Other Broadband Services</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>